--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,85 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  background-color: #f28ab2;
+  justify-content: center;
+  display: flex;
+  align-items: center;
+  /* flex-direction: column; */
+  height: 75vh;
+  width: 100vw;
+
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.App {
+  text-align: center;
+  border-radius: 5px;
+  margin-top: 13rem;
+  height: 80vh;
+  width: 24vw;
+  background-color: white;
+  /* box-shadow:  0px 0px 9px 0px rgba(0,0,0,0.75); */
+  
 }
+
+.first {
+  font-size: 1.7rem;
+  padding-top: 1.5rem;
+  color: hsl(209, 61%, 16%);
+  letter-spacing: 2px;
+  margin-right: 9rem;
+}
+
+.objects {
+  display: grid;
+  align-items: center;
+  justify-content: space-between;
+  text-transform: capitalize;
+}
+
+.imgg {
+  width: 75px;
+  height: 75px;
+  object-fit: cover;
+  border-radius: 50%;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+  margin-bottom: -1.9rem;
+  margin-top: 2rem;
+  margin-left: 1.8rem;
+}
+
+.nam {
+  margin-left: 7.2rem;
+  letter-spacing: 2px;
+  color: hsl(209, 61%, 16%);
+  padding-bottom: .3rem;
+  margin-top: -1.6rem;
+  
+  
+}
+
+.age {
+  margin-left: 7rem;
+  display: flex;
+  justify-content: flex-start;
+  color: hsl(209, 9%, 52%);
+  font-size: 16px;
+  
+}
+
+.btn {
+  background-color: #f28ab2;
+  padding: 0.6rem 9.3rem;
+  border-color: transparent;
+  font-size: 18px;
+  letter-spacing: 2px;
+  color: white;
+  border-radius: 4px;
+  margin-top: 2.8rem;
+}
+
